--- a/static/main.css
+++ b/static/main.css
@@ -8,13 +8,10 @@
     margin-bottom: 0.5em;
     }
 
-.prf-lst-prf-name {
-    display: inline-block;
-    margin-right: 0.5em;
-    width: 60px;
-    font-weight: bold;
-}
-
 .rnm-sbmt {
     display: none;
+    }
+
+#takeout-clarification {
+    width: 35rem;
     }
