- Start formatting the Takeout section in index.html  - Mention folder name in the SSE error message for when no watch-history files are found in the provided folder

--- a/static/main.css
+++ b/static/main.css
@@ -8,8 +8,8 @@
     margin-bottom: 0.5em;
     }
 
-#takeout-clarification {
-    width: 35rem;
+#takeout-setup {
+    width: 50em;
     }
 
 .link-btn, .link-btn:visited {
@@ -23,3 +23,5 @@
     margin-top: 0.3rem;
     margin-bottom: 0.3rem;
     }
+
+
