Update description of valid paths for finding watch-history.html files in index.html, mirroring changes to get_watch_history_files in convert_takeout in previous commit (1ee2337652aac3418d8f7171aa3881677935eaa5)

--- a/templates/index.html
+++ b/templates/index.html
@@ -168,9 +168,8 @@
             The files will only be located within the given directory if any of the following is inside:
             <ul>
                 <li>watch-history files themselves</li>
-                <li>"Takeout" directory, extracted from the archive downloaded from Google Takeout</li>
-                <li>Directory of the download archive, extracted with the same
-                    name as the archive e.g. "takeout-20181120T163352Z-001"</li>
+                <li>Directories of the download archives, extracted with the same
+                    name as the archives e.g. "takeout-20181120T163352Z-001"</li>
             </ul>
             <p>
                 The search will become confined to one of these types after the first match, e.g. if a
